--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -7,7 +7,6 @@
             <td style="width:40%;text-align:left">{{ .title | markdownify }}</td>
             {{- if .header }} 
             <td style="width:5%;text-align:center" class="mid-table-header">Slides</td>
-            <td style="width:5%;text-align:center" class="mid-table-header">Reading</td>
             <td style="width:5%;text-align:center" class="mid-table-header">Lab</td>
             <td style="width:5%;text-align:center" class="mid-table-header">HW</td>
             <td style="width:5%;text-align:center" class="mid-table-header">Quiz</td>
@@ -27,18 +26,8 @@
             </td>
             {{- end }}
 
-            {{- if .reading}}
-            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/reading/{{ .reading }}/">
-                    <i class="fas fa-book fa-lg"></i></a></td>
-            {{- else }}
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-book fa-lg"></i></font>
-            </td>
-            {{- end }}
-
             {{- if .lab }}
-            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/hw/{{ .hw }}/">
+            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/labs/{{ .lab }}/">
                     <i class="fas file-code fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
@@ -68,7 +57,7 @@
             {{- end }}
             
                {{- if .project }}
-            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/assignment/{{ .assignment }}/">
+            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/project/{{ .project }}/">
                     <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
