--- a/static/css/sta210.css
+++ b/static/css/sta210.css
@@ -79,6 +79,7 @@ body, button, input, textarea {
 
 a {
   transition: color 0.3s;
+  color: #aa008e;
 }
 
 /*----- COLORED LIST BULLET----*/
@@ -91,7 +92,7 @@ a {
 .article-content ul li::before, 
 .learn-top-nav ul li::before {
   content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-  color: #CA225E; /* Change the color */
+  color: #aa008e; /* Change the color */
   display: inline-block; /* Needed to add space between the bullet and the text */
   width: 1.5em; /* Also needed for space (tweak if needed) */
   margin-left: -1.5em; /* Also needed for space (tweak if needed) */
@@ -127,7 +128,7 @@ div.tagline {
 .article-title,               /* Most page titles */
 .column75 div.sectionTitle {  /* Learn page section title */
   font-family: 'Lato', sans-serif;
-  color: #CA225E;
+  color: #aa008e;
   font-weight: normal;
   text-transform: none;
   letter-spacing: normal;
@@ -161,7 +162,7 @@ h3 {
 }
 
 h3 a {
-  color: #CA225E;
+  color: #aa008e;
   text-transform: none;
   font-size: 1.5em;
   letter-spacing: normal;
@@ -198,11 +199,11 @@ h4 code {
 }
 
   .sectionTitle, .sectionTitle a{
-    color: #CA225E;
+    color: #aa008e;
   }
   
  /* #TOC a { */ /* Get Started Page TOC */
-   /*  color: #ca225ec9;
+   /*  color: #aa008ec9;
   } */
 
 
@@ -219,7 +220,7 @@ h4 code {
 
 #TableOfContents a:hover,
 .articleCategory a:hover {
-  color: #1a162dde;
+  color: #aa008e;
   text-decoration: none;
 }
 
@@ -264,12 +265,12 @@ h4 code {
 }
 
 .column25-left .sectionTitle a:hover:not(.current) {
-  color: #1a162dde;
+  color: #1a162d;
   text-decoration: none;
 }
 
 .column25-left .sectionTitle.current {
-  color: #CA225E;
+  color: #aa008e;
   text-decoration: none;
 }
 
@@ -518,7 +519,7 @@ a.learn-top-nav-item,
   letter-spacing: 2pt;
   font-size: 0.8rem !important;
   font-weight: bold;
-  color: #ca225ec9;
+  color: #aa008e;
 }
 
 .tutorial #TableOfContents ul li {
@@ -527,7 +528,7 @@ a.learn-top-nav-item,
 
 a.learn-top-nav-item:hover,
 .tutorial #TableOfContents a:hover {
-  color: #CA225E;
+  color: #aa008e;
   text-decoration: none;
 }
 
@@ -542,7 +543,7 @@ a.learn-top-nav-item:hover,
 .listItem.learn-top-nav:before,
 .listItem.tutorial:after,
 .listItem.tutorial:before {
-    border: 1pt solid #ca225e3d; 
+    border: 1pt solid #aa008e; 
     bottom: 0;    
     content: '';
     position: absolute;
@@ -576,7 +577,7 @@ a.learn-top-nav-item:hover,
 
 .tutorial #TableOfContents ul li::before {
 	content: "\2022";
-	color: #CA225E;
+	color: #aa008e;
 	display: inline-block;
 	width: 1.5em;
 	margin-left: -1.5em; 
@@ -1074,8 +1075,8 @@ pre {
 /* Style buttons */
 .test-drive-btn {
   background-color: #eab0c46b;
-  border: solid 1pt #ca225e47;
-  color: #ca225e;
+  border: solid 1pt #aa008e47;
+  color: #aa008e;
   padding: 12px 16px;
   font-size: 16px;
   cursor: pointer;
@@ -1086,7 +1087,7 @@ pre {
 
 /* Darker background on mouse-over */
 .test-drive-btn:hover {
-  background-color: #CA225E;
+  background-color: #aa008e;
   color: #fcfcfc;
   border: 1pt solid;
 }
