--- a/static/slides/sta210-slides.css
+++ b/static/slides/sta210-slides.css
@@ -46,6 +46,11 @@ a, a > code {
 .remark-code, .remark-inline-code { 
   font-family: 'Source Code Pro', 'Lucida Console', Monaco, monospace; 
 }
+
+
+.remark-inline-code {
+  font-weight: bold;
+}
 .remark-code-line-highlighted     { background-color: #ffff88; }
 
 .inverse {
