--- a/public/labs/sta210-labs.css
+++ b/public/labs/sta210-labs.css
@@ -1,14 +1,13 @@
 /* * Customizing tufte.css * */
 
 @import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700';
-@import 'https://fonts.googleapis.com/css?family=Source+Code+Pro';
-
+@import 'https://fonts.googleapis.com/css?family=Source+Code+Pro'; 
 @charset "UTF-8";
 
 /* Tufte CSS styles */
 
 html {
-	font-size: 9.5pt;
+	font-size: 15px;
 }
 
 body {
@@ -22,25 +21,25 @@ body {
 h1.title {
 	font-weight: 700;
 	font-family: 'Source Sans Pro', sans-serif;
-	color: #00897B;
+	color: #008eaa;
 }
 
 h1 {
 	font-style: normal;
 	font-family: 'Source Sans Pro', sans-serif;
-	color: #00897B;
+	color: #008eaa;
 }
 
 h2 {
 	font-style: normal;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: 400;
-	color: #00897B;
+	color: #008eaa;
 }
 
 h3.subtitle {
 	font-style: normal;
-	color: #00897B;
+	color: #008eaa;
 }
 
 h4 {
@@ -55,17 +54,17 @@ h4 {
 h4.author,
 h4.date {
 	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 300;
+	font-weight: 350;
 }
 
 .numeral {
 	font-family: "Source Sans Pro";
-	font-weight: 300;
+	font-weight: 350;
 }
 
 em {
 	font-style: italic;
-	font-weight: 300;
+	font-weight: 350;
 	font-family: "Source Sans Pro";
 }
 
@@ -80,7 +79,7 @@ strong {
 /* @media screen and (max-width: 760px) {
 	pre {
 		width: 100%;
-		font-size: 16px;
+		font-size: 15px;
 	}
 }
 */
@@ -88,7 +87,7 @@ strong {
 @media screen and (max-width: 760px) {
 	pre {
 		width: 100%;
-		font-size: 16px;
+		font-size: 15px;
      	overflow-x: auto;
 	}
 }
@@ -122,7 +121,7 @@ pre.r {
 
 .marginnote code,
 .sidenote code {
-	font-size: 1rem;
+	font-size: 14px;
 }
 
 
@@ -143,7 +142,7 @@ ol>li {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-right: 0px;
-	padding-left: 95px;
+	padding-left: 110px;
 }
 
 ol>li:before {
@@ -152,7 +151,7 @@ ol>li:before {
 	/* Increment the counter by 1 */
 	counter-increment: li;
 	position: absolute;
-	color: #00897B;
+	color: #008eaa;
 	left: -0.5px;
 	font-weight: bold;
 	margin-right: 10px;
@@ -167,7 +166,7 @@ ol ol {
 }
 
 td {
-  font-size: 16px;
+  font-size: 15px;
 }
 
 /*Style for the Footer*/
@@ -177,7 +176,14 @@ td {
   bottom: 0;
   width: 100%;
   color: #7C878E;
-  font-size: 10pt;
+  font-size: 14px;
 }
 
+/*Commit message*/
 
+div .commit {
+  font-size: 16px;
+  font-weight: 400;
+  color: #aa008e;
+  text-decoration: italic;
+}
